--- a/src/component/Toolbar/style.css
+++ b/src/component/Toolbar/style.css
@@ -49,6 +49,17 @@
   transition: background-color 0.15s ease, border-color 0.15s ease, color 0.15s ease;
 }
 
+.toolbar-button.active {
+  background: #f5f5f5;
+  /* border-color: #16a34a; */
+  /* color: #1890ff; */
+}
+
+/* .toolbar-button.active .toolbar-icon {
+  stroke: #1890ff;
+  fill: #1890ff;
+} */
+
 .toolbar-button:hover {
   background: #f5f5f5;
 }
